CIT-31 add sales and try to refactor the service code