@@ -3,6 +3,8 @@ package com.projet.citronix.service.impl;
 import com.projet.citronix.dto.farm.FarmRequestDTO;
 import com.projet.citronix.dto.farm.FarmResponseDTO;
 import com.projet.citronix.dto.farm.FarmSearchDTO;
+import com.projet.citronix.exception.custom.FarmNotFoundException;
+import com.projet.citronix.exception.custom.InvalidFarmSizeException;
 import com.projet.citronix.mapper.FarmMapper;
 import com.projet.citronix.model.Farm;
 import com.projet.citronix.repository.FarmRepository;
@@ -10,12 +12,11 @@ import com.projet.citronix.repository.criteriaBuilder.IFarmCriteria;
 import com.projet.citronix.service.FarmService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,84 +24,101 @@ public class FarmServiceImpl implements FarmService {
 
     private final FarmRepository farmRepository;
     private final FarmMapper farmMapper;
-    private final IFarmCriteria fermeCriteria;
+    private final IFarmCriteria farmCriteria;
 
     @Override
+    @Transactional
     public FarmResponseDTO addFarm(FarmRequestDTO farmRequestDTO) {
-        System.out.println("service: " + farmRequestDTO.name());
         Farm farm = farmMapper.toEntity(farmRequestDTO);
-        System.out.println("mapper: " + farm.getName());
-        farm = farmRepository.save(farm);
-        System.out.println("response: " + farmMapper.toDTO(farm));
-
-        return farmMapper.toDTO(farm);
+        validateFarmSize(farm.getSize());
+        Farm savedFarm = farmRepository.save(farm);
+        return farmMapper.toDTO(savedFarm);
     }
 
     @Override
+    @Transactional
     public FarmResponseDTO updateFarm(Long id, FarmRequestDTO farmRequestDTO) {
-        Optional<Farm> existingFarmOpt = farmRepository.findById(id);
-        if (existingFarmOpt.isPresent()) {
-            Farm existingFarm = existingFarmOpt.get();
+        Farm existingFarm = findTheFarmById(id);
+        validateFarmSize(farmRequestDTO.size());
 
-            farmMapper.toEntity(farmRequestDTO);
-            existingFarm = farmRepository.save(existingFarm);
-            return farmMapper.toDTO(existingFarm);
-        } else {
-            throw new RuntimeException("Farm not found");
-        }
+        farmMapper.updateEntityFromDTO(farmRequestDTO, existingFarm);
+        Farm updatedFarm = farmRepository.save(existingFarm);
+        return farmMapper.toDTO(updatedFarm);
     }
 
     @Override
+    @Transactional
     public boolean removeFarm(Long id) {
-        Optional<Farm> farmOpt = farmRepository.findById(id);
-        if (farmOpt.isPresent()) {
-            farmRepository.deleteById(id);
-            return true;
-        }
-        return false;
+        Farm farm = findTheFarmById(id);
+        farmRepository.delete(farm);
+        return true;
     }
 
     @Override
     public List<FarmResponseDTO> getAllFarms() {
-        List<Farm> farms = farmRepository.findAll();
-        return farms.stream()
+        return farmRepository.findAll().stream()
                 .map(farmMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public FarmResponseDTO getFarmById(Long id) {
-        Optional<Farm> farmOpt = farmRepository.findById(id);
-        if (farmOpt.isPresent()) {
-            return farmMapper.toDTO(farmOpt.get());
-        } else {
-            throw new RuntimeException("Farm not found");
-        }
+        Farm farm = findTheFarmById(id);
+        return farmMapper.toDTO(farm);
     }
 
     @Override
-    public List<FarmResponseDTO> getAllFarmsByNameAndLocalisation(FarmSearchDTO searchFermeDTO) {
+    public List<FarmResponseDTO> getAllFarmsByNameAndLocalisation(FarmSearchDTO searchDTO) {
+        Map<String, Object> filters = buildFilterMap(searchDTO);
 
-        Map<String, Object> filters = new HashMap<>();
-        if (searchFermeDTO.name() != null) {
-            filters.put("name", searchFermeDTO.name());
-        }
-        if (searchFermeDTO.location() != null) {
-            filters.put("location", searchFermeDTO.location());
-        }
-        if (searchFermeDTO.size() != null) {
-            filters.put("size", searchFermeDTO.size());
-        }
-        if (searchFermeDTO.createdDateAfter() != null) {
-            filters.put("createdDateAfter", searchFermeDTO.createdDateAfter());
-        }
-
-        List<Farm> farms = fermeCriteria.findFarmsByCriteria(filters);
+        List<Farm> farms = farmCriteria.findFarmsByCriteria(filters);
         if (farms.isEmpty()) {
-            throw new RuntimeException("No farms found matching the criteria");
+            throw new FarmNotFoundException("No farms found matching the criteria.");
         }
 
-        return farms.stream().map(farmMapper::toDTO).toList();
+        return farms.stream()
+                .map(farmMapper::toDTO)
+                .toList();
     }
 
+    /**
+     * Finds the farm by ID and throws a custom exception if not found.
+     */
+    private Farm findTheFarmById(Long id) {
+        return farmRepository.findById(id)
+                .orElseThrow(() -> {
+                    System.out.println("Farm with ID " + id + " not found.");
+                    return new FarmNotFoundException("Farm not found with ID: " + id);
+                });
+    }
+
+
+    /**
+     * Validates that the farm size meets the minimum requirement.
+     */
+    private void validateFarmSize(double size) {
+        if (size < 1000) {
+            throw new InvalidFarmSizeException("Farm area size must not be less than 1000.");
+        }
+    }
+
+    /**
+     * Builds a filter map from the FarmSearchDTO.
+     */
+    private Map<String, Object> buildFilterMap(FarmSearchDTO searchDTO) {
+        Map<String, Object> filters = new HashMap<>();
+        if (searchDTO.name() != null) {
+            filters.put("name", searchDTO.name());
+        }
+        if (searchDTO.location() != null) {
+            filters.put("location", searchDTO.location());
+        }
+        if (searchDTO.size() != null) {
+            filters.put("size", searchDTO.size());
+        }
+        if (searchDTO.createdDateAfter() != null) {
+            filters.put("createdDateAfter", searchDTO.createdDateAfter());
+        }
+        return filters;
+    }
 }
